🎨 ddd構成修正
